# aruco_to_pose

./: .gitignore  CMakeLists.txt  main-ros.py  main.py  package.xml  requirements.txt
calibration/: Calibration.py  FisheyeCalibration.py  PinholeCalibration.py
coordinate/: Transforms.py
detection/: Detector.py
frame/: FisheyeFrame.py  Frame.py
launch/: aruco_to_pose_only.launch  aruco_to_pose_raspi_cam_1280x960_10fps.launch  aruco_to_pose_raspi_cam_5MP_WORKING.launch  aruco_to_pose_usb_cam_2592x1944_5fps.launch  weathercock_detector_only.launch  weathercock_detector_raspicam.launch  weathercock_detector_rosbag.launch  weathercock_detector_webcam.launch
plateau/: Marker.py  Plateau.py
resources/: parameters_fisheye_pi.txt  parameters_ps3eye.txt  parameters_webcam.txt
scripts/: aruco_to_pose  robot_aruco_tf_broadcaster
src/: aruco_to_pose.py  calibration.py  campi_opencv.yaml  robot_tf_broadcaster.py  weathercock_detector.py
src/coordinate/: Transforms.py
src/frame/: FisheyeFrame.py  Frame.py  PinholeFrame.py
src/resources/: parameters_fisheye_pi_hd.txt  parameters_fisheye_pi_simu.txt  parameters_ps3eye_.txt  parameters_webcam_victor.txt
system/: System.py
syztem/: Syztem.py
